--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.2'
+}
